--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,58 +1,19 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
-    zoom: 80%;
+    zoom: 85%;
 }
 .hide{
     display: none;
 }
-/*      nav bar     */
 
 #nav12{
-    background-color: #FFFFFF;
-    box-shadow: 0px 0px 20px #01010154;
-    /*height: 90px;*/
-    font-weight: 500;
-
-}
-.navbar-light .navbar-nav .nav-link:hover{
-    color: #62BEE4;
-}
- .navbar-light .navbar-nav .active  .nav-link{
-    color: #62BEE4;
-}
-.sign-in{
-    color: white;
-    border: 2px solid #40B0DE;
-    border-radius: 153px;
-    background: #62BEE4;
-
-}
-.sign-in:hover{
-    background: transparent;
-
-}
-
-/* profile-button */
-.profile-btn{
-    width: 55px;
-    height: 42px;
-
-}
-.profile-img{
-    width: 100%;
-    height: 100%;
-}
-.profile-div:hover .profile-menu{
-    display: block;
-}
-.profile-menu a:hover{
-    color: #62BEE4;
+    zoom: 100%;
 }
 
 /*****     firstPage  ******/
 
 #firstPage{
-    margin-top: 70px;
+    margin-top: 0px;
 
 }
 .hed1{
@@ -259,13 +220,6 @@ body{
     font-size: 45px;
     margin-bottom: 20;
 }
-.show-more{
-    border-radius: 25px;
-    padding: 4px 41px;
-    margin:10px auto;
-    font-size: 24px;
-
-}
 
 /*    foooter       */
 .footer{
@@ -278,25 +232,21 @@ body{
     border: 2px solid white;
     font-size: 20px;
     border-radius: 40px;
+    width: 120px;
 }
-.footer-links{
-    margin:20px auto!important;
+
+.footerlinks{
+    margin: 20px auto !important;
     text-align: center;
-
 }
-.footer-links li{
-
+.footerlinks li{
     display: inline-block;
-
-
 }
-.footer-links li a{
+.footerlinks li a{
     color: #e2e3e5;
-
 }
-.footer-links li a:hover{
-    color: #62BEE4;
-
+.footerlinks li a:hover{
+    color:#40B0DE ;
 }
 .footer-btn:hover{
     color: white;
