--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,6 +1,6 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
-    zoom: 85%;
+    zoom: 75%;
 }
 .hide{
     display: none;
@@ -13,14 +13,14 @@ body{
 /*****     firstPage  ******/
 
 #firstPage{
-    margin-top: 0px;
+    margin-top: 0;
 
 }
 .hed1{
     margin: 10px;
     padding: 10px;
     font-size: 50px;
-    font-weight: 550;
+    font-weight: 500;
 }
 /*****     carousel  ******/
 .carousel-caption-edit{
@@ -68,8 +68,8 @@ body{
     text-align: center;
     height: 200px;
     margin: 5px 15px 20px;
-    padding-top: 20;
-    padding-bottom: 20;
+    padding-top: 20px;
+    padding-bottom: 20px;
     float: left;
     border-radius: 25px;
 }
@@ -87,7 +87,7 @@ body{
 }
 .ask_overlay{
     background: rgba(0,0,0,.3);
-    height: 450;
+    height: 450px;
     position: relative;
     top: 0;
     left: 0;
@@ -96,8 +96,8 @@ body{
 .ask_front{
     background-image: url("denta-1.png");
     position: relative;
-    height: 600;
-    width: 400;
+    height: 600px;
+    width: 400px;
     top: -149px;
     left: 0;
 }
@@ -108,7 +108,7 @@ body{
     top: 110px;
     left: 10%;
     color: white;
-    font-size: 64;
+    font-size: 64px;
     text-align: center;
 }
 .ask_btn{
@@ -137,8 +137,8 @@ body{
     left: 2.5%;
     z-index: 2;
     display: none;
-    margin: 0 33;
-    padding: 0 25;
+    margin: 0 33px;
+    padding: 0 25px;
     overflow: auto;
     background: #f4f9fc;
     box-shadow: 0px 0px 45px blue;
@@ -146,12 +146,12 @@ body{
 
 }
 .service-detial-img{
-    padding: 20;
+    padding: 20px;
     text-align: center;
 }
 .detial-img{
-    width: 550;
-    height: 450;
+    width: 550px;
+    height: 450px;
     border-radius: 25px;
 }
 .service-detial-exit{
@@ -187,7 +187,7 @@ body{
     padding: 35px 0px 30px;
 }
 .feature img{
-    padding: 15;
+    padding: 15px;
     border: 2px solid;
     margin-bottom: 10px;
 
@@ -226,7 +226,7 @@ body{
 /*    foooter       */
 .footer{
     background:#182028 ;
-    margin-top: 20;
+    margin-top: 20px;
     position: relative;
 }
 
